# fastder

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
conda/recipe/: build.sh  meta.yaml
cpp/: Average.cpp  Average.h  Averager.cpp  Averager.h  BedGraphRow.cpp  BedGraphRow.h  CMakeLists.txt  GTF.cpp  GTF.h  GTFRow.cpp  GTFRow.h  Integrator.cpp  Integrator.h  Parser.cpp  Parser.h  SJRow.cpp  SJRow.h  StitchedER.cpp  StitchedER.h  cortex_vs_cereb_test  cortex_vs_cereb_test.cpp  integrate_sj.cpp  main.cpp  parse.cpp  parse.h  test  test.cpp
python/: initial.py  parameters.py
scripts/: bigwigtobed_all.sh  bigwigtobed_all_chr19.sh
tests/: CMakeLists.txt  UnitTests.cpp  splicing_scenarios.cpp  test_stitch_up.cpp
tests/gtfs/: parser_test2.gtf  parser_test3.gtf  splicing_scenarios_test1.gtf  splicing_scenarios_test2.gtf  splicing_scenarios_test3.gtf  splicing_scenarios_test4.gtf  splicing_scenarios_test5.gtf  splicing_scenarios_test6.gtf  splicing_scenarios_test7.gtf  splicing_scenarios_test8.gtf
tests/test_data/: FASTDER_RESULT_POS_TOL_10_MIN_COV_0.050000_COV_TOL_0.800000_MIN_LENGTH_10.gtf  gtex.base_sums.EXON_SKP_1.ALL.bedGraph  gtex.junctions.BRAIN.ALL.MM  gtex.junctions.BRAIN.ALL.RR  recount3_BigWig_list_BRAIN_URLs.csv
